--- a/CST65Project/Web.config
+++ b/CST65Project/Web.config
@@ -4,10 +4,22 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <appSettings>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+  </appSettings>
+
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
+
+    <customErrors mode="RemoteOnly" redirectMode="ResponseRewrite">
+      <error statusCode="404" redirect="/404Error.aspx?Source=ASP.NET" />
+      <error statusCode="500" redirect="/500Error.aspx?Source=ASP.NET"/>
+    </customErrors>
+  
+    <pages enableSessionState="true"></pages>
   </system.web>
+
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs"
@@ -18,4 +30,12 @@
         warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+
+  <system.webServer>
+    <httpErrors errorMode="Custom" existingResponse="Auto">
+      <clear />
+      <error statusCode="404" path="/404Error.aspx?source=WebServer" responseMode="ExecuteURL"/>
+      <error statusCode="500" path="/500Error.aspx?source=WebServer" responseMode="ExecuteURL"/>
+    </httpErrors>
+  </system.webServer>
 </configuration>
