--- a/CST65Project/Web.config
+++ b/CST65Project/Web.config
@@ -7,6 +7,10 @@
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
   </appSettings>
+  <connectionStrings>
+    <add connectionString="Server=aura.cset.oit.edu; Database=patrick_barnett; User=patrick_barnett;
+                          Password=pb1749;" name="oitSqlServer" />
+  </connectionStrings>
 
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
