--- a/CST65Project/Web.config
+++ b/CST65Project/Web.config
@@ -12,6 +12,40 @@
                           Password=pb1749;" name="oitSqlServer" />
   </connectionStrings>
 
+  <location path="Customers">
+    <system.web>
+      <authorization>
+        <deny users="?"/>
+        <allow users="*"/>
+      </authorization>
+    </system.web>
+  </location>
+
+  <location path="Customers/Register.aspx">
+    <system.web>
+      <authorization>
+        <allow users="*"/>
+      </authorization>
+    </system.web>
+  </location>
+
+  <location path="Customers/Login.aspx">
+    <system.web>
+      <authorization>
+        <allow users="*"/>
+      </authorization>
+    </system.web>
+  </location>
+  
+  <location path="Admin/UserManagement.aspx">
+    <system.web>
+      <authorization>
+        <allow roles="Admins" />
+        <deny users="*"/>
+      </authorization>
+    </system.web>
+  </location>
+
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
@@ -20,8 +54,37 @@
       <error statusCode="404" redirect="/404Error.aspx?Source=ASP.NET" />
       <error statusCode="500" redirect="/500Error.aspx?Source=ASP.NET"/>
     </customErrors>
-  
+
+    <trace enabled="true" requestLimit="200" localOnly="true"/>
+    <authentication mode="Forms">
+      <forms loginUrl="Customers/Login.aspx" />
+    </authentication>
+
     <pages enableSessionState="true"></pages>
+
+    <membership defaultProvider="SqlMembership">
+      <providers>
+        <add name="SqlMembership"
+      type="System.Web.Security.SqlMembershipProvider"
+      connectionStringName="oitSqlServer"
+      applicationName="CST465"
+      enablePasswordRetrieval="false"
+      enablePasswordReset="true"
+      requiresQuestionAndAnswer="true"
+      requiresUniqueEmail="true"
+      passwordFormat="Hashed"/>
+      </providers>
+    </membership>
+
+    <roleManager defaultProvider="SqlRoles" enabled="true">
+      <providers>
+        <add name="SqlRoles"
+            type="System.Web.Security.SqlRoleProvider"
+            applicationName="CST465"
+            connectionStringName="oitSqlServer" />
+      </providers>
+    </roleManager>
+
   </system.web>
 
   <system.codedom>
