--- a/CST65Project/CST465Project.csproj
+++ b/CST65Project/CST465Project.csproj
@@ -69,7 +69,12 @@
     <Content Include="404Error.aspx" />
     <Content Include="500Error.aspx" />
     <Content Include="AddTreater.aspx" />
+    <Content Include="Admin\UserManagement.aspx" />
+    <Content Include="Blog.aspx" />
     <Content Include="css\DefaultStyles.css" />
+    <Content Include="Customers\test.aspx" />
+    <Content Include="Customers\Register.aspx" />
+    <Content Include="Customers\Login.aspx" />
     <Content Include="img\propcycleHeadTemp.jpg" />
     <Content Include="packages.config" />
     <Content Include="App_Master\BaseTemplate.Master" />
@@ -82,9 +87,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Default.aspx" />
-    <Content Include="UserProfile.aspx" />
+    <Content Include="Customers\UserProfile.aspx" />
     <Content Include="ViewTreaters.aspx" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="404Error.aspx.cs">
@@ -108,6 +115,13 @@
     <Compile Include="AddTreater.aspx.designer.cs">
       <DependentUpon>AddTreater.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Admin\UserManagement.aspx.cs">
+      <DependentUpon>UserManagement.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Admin\UserManagement.aspx.designer.cs">
+      <DependentUpon>UserManagement.aspx</DependentUpon>
+    </Compile>
     <Compile Include="App_Master\BaseTemplate.Master.cs">
       <DependentUpon>BaseTemplate.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -115,7 +129,35 @@
     <Compile Include="App_Master\BaseTemplate.Master.designer.cs">
       <DependentUpon>BaseTemplate.Master</DependentUpon>
     </Compile>
+    <Compile Include="Blog.aspx.cs">
+      <DependentUpon>Blog.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Blog.aspx.designer.cs">
+      <DependentUpon>Blog.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Code\UserProfile.cs" />
+    <Compile Include="Customers\test.aspx.cs">
+      <DependentUpon>test.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Customers\test.aspx.designer.cs">
+      <DependentUpon>test.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Customers\Register.aspx.cs">
+      <DependentUpon>Register.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Customers\Register.aspx.designer.cs">
+      <DependentUpon>Register.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Customers\Login.aspx.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Customers\Login.aspx.designer.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -124,11 +166,11 @@
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserProfile.aspx.cs">
+    <Compile Include="Customers\UserProfile.aspx.cs">
       <DependentUpon>UserProfile.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="UserProfile.aspx.designer.cs">
+    <Compile Include="Customers\UserProfile.aspx.designer.cs">
       <DependentUpon>UserProfile.aspx</DependentUpon>
     </Compile>
     <Compile Include="ViewTreaters.aspx.cs">
