--- a/CST65Project/CST465Project.csproj
+++ b/CST65Project/CST465Project.csproj
@@ -69,8 +69,11 @@
     <Content Include="404Error.aspx" />
     <Content Include="500Error.aspx" />
     <Content Include="AddTreater.aspx" />
+    <Content Include="Assignment4.aspx" />
     <Content Include="css\DefaultStyles.css" />
+    <Content Include="EssayQuestion.ascx" />
     <Content Include="img\propcycleHeadTemp.jpg" />
+    <Content Include="MultipleChoiceQuestion.ascx" />
     <Content Include="packages.config" />
     <Content Include="App_Master\BaseTemplate.Master" />
     <None Include="Web.Debug.config">
@@ -115,6 +118,16 @@
     <Compile Include="App_Master\BaseTemplate.Master.designer.cs">
       <DependentUpon>BaseTemplate.Master</DependentUpon>
     </Compile>
+    <Compile Include="Assignment4.aspx.cs">
+      <DependentUpon>Assignment4.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Assignment4.aspx.designer.cs">
+      <DependentUpon>Assignment4.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Code\TrueFalseQuestion.cs" />
+    <Compile Include="Code\ShortTextQuestion.cs" />
+    <Compile Include="Code\ITestQuestion.cs" />
     <Compile Include="Code\UserProfile.cs" />
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
@@ -122,6 +135,20 @@
     </Compile>
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="EssayQuestion.ascx.cs">
+      <DependentUpon>EssayQuestion.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="EssayQuestion.ascx.designer.cs">
+      <DependentUpon>EssayQuestion.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="MultipleChoiceQuestion.ascx.cs">
+      <DependentUpon>MultipleChoiceQuestion.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MultipleChoiceQuestion.ascx.designer.cs">
+      <DependentUpon>MultipleChoiceQuestion.ascx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserProfile.aspx.cs">
