--- a/CST65Project/Web.config
+++ b/CST65Project/Web.config
@@ -46,6 +46,15 @@
     </system.web>
   </location>
 
+  <location path="Support.aspx">
+    <system.web>
+      <authorization>
+        <deny users="?"/>
+        <allow users="*"/>
+      </authorization>
+    </system.web>
+  </location>
+
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
@@ -84,6 +93,12 @@
             connectionStringName="oitSqlServer" />
       </providers>
     </roleManager>
+
+    <siteMap defaultProvider="SecuredSiteMap">
+      <providers>
+        <add name="SecuredSiteMap" type="System.Web.XmlSiteMapProvider" siteMapFile="~/Web.sitemap" securityTrimmingEnabled="true"/>
+      </providers>
+    </siteMap>
 
   </system.web>
 
