--- a/CST65Project/CST465Project.csproj
+++ b/CST65Project/CST465Project.csproj
@@ -68,9 +68,12 @@
   <ItemGroup>
     <Content Include="404Error.aspx" />
     <Content Include="500Error.aspx" />
+    <Content Include="About.aspx" />
     <Content Include="AddTreater.aspx" />
     <Content Include="Admin\UserManagement.aspx" />
     <Content Include="Assignment4.aspx" />
+    <Content Include="Blog.aspx" />
+    <Content Include="Contact.aspx" />
     <Content Include="css\DefaultStyles.css" />
     <Content Include="Customers\Login.aspx" />
     <Content Include="Customers\Register.aspx" />
@@ -86,9 +89,12 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+    <Content Include="Web.sitemap" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Default.aspx" />
+    <Content Include="Products.aspx" />
+    <Content Include="Support.aspx" />
     <Content Include="UserProfileAss4.aspx" />
     <Content Include="ViewTreaters.aspx" />
     <Content Include="Web.config" />
@@ -107,6 +113,13 @@
     </Compile>
     <Compile Include="500Error.aspx.designer.cs">
       <DependentUpon>500Error.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="About.aspx.cs">
+      <DependentUpon>About.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="About.aspx.designer.cs">
+      <DependentUpon>About.aspx</DependentUpon>
     </Compile>
     <Compile Include="AddTreater.aspx.cs">
       <DependentUpon>AddTreater.aspx</DependentUpon>
@@ -136,10 +149,24 @@
     <Compile Include="Assignment4.aspx.designer.cs">
       <DependentUpon>Assignment4.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Blog.aspx.cs">
+      <DependentUpon>Blog.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Blog.aspx.designer.cs">
+      <DependentUpon>Blog.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Code\TrueFalseQuestion.cs" />
     <Compile Include="Code\ShortTextQuestion.cs" />
     <Compile Include="Code\ITestQuestion.cs" />
     <Compile Include="Code\UserProfile.cs" />
+    <Compile Include="Contact.aspx.cs">
+      <DependentUpon>Contact.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Contact.aspx.designer.cs">
+      <DependentUpon>Contact.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Customers\Login.aspx.cs">
       <DependentUpon>Login.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -182,7 +209,21 @@
     <Compile Include="MultipleChoiceQuestion.ascx.designer.cs">
       <DependentUpon>MultipleChoiceQuestion.ascx</DependentUpon>
     </Compile>
+    <Compile Include="Products.aspx.cs">
+      <DependentUpon>Products.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Products.aspx.designer.cs">
+      <DependentUpon>Products.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Support.aspx.cs">
+      <DependentUpon>Support.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Support.aspx.designer.cs">
+      <DependentUpon>Support.aspx</DependentUpon>
+    </Compile>
     <Compile Include="ViewTreaters.aspx.cs">
       <DependentUpon>ViewTreaters.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
