--- a/CST65Project/CST465Project.csproj
+++ b/CST65Project/CST465Project.csproj
@@ -79,7 +79,9 @@
     <Content Include="Customers\Register.aspx" />
     <Content Include="Customers\UserProfile.aspx" />
     <Content Include="EssayQuestion.ascx" />
+    <Content Include="img\ghostrider2600.jpg" />
     <Content Include="img\propcycleHeadTemp.jpg" />
+    <Content Include="MidtermExam.aspx" />
     <Content Include="MultipleChoiceQuestion.ascx" />
     <Content Include="packages.config" />
     <Content Include="App_Master\BaseTemplate.Master" />
@@ -89,6 +91,7 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+    <Content Include="Results.aspx" />
     <Content Include="Web.sitemap" />
   </ItemGroup>
   <ItemGroup>
@@ -159,6 +162,7 @@
     <Compile Include="Code\TrueFalseQuestion.cs" />
     <Compile Include="Code\ShortTextQuestion.cs" />
     <Compile Include="Code\ITestQuestion.cs" />
+    <Compile Include="Code\QuestionAnswer.cs" />
     <Compile Include="Code\UserProfile.cs" />
     <Compile Include="Contact.aspx.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
@@ -202,6 +206,13 @@
     <Compile Include="EssayQuestion.ascx.designer.cs">
       <DependentUpon>EssayQuestion.ascx</DependentUpon>
     </Compile>
+    <Compile Include="MidtermExam.aspx.cs">
+      <DependentUpon>MidtermExam.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MidtermExam.aspx.designer.cs">
+      <DependentUpon>MidtermExam.aspx</DependentUpon>
+    </Compile>
     <Compile Include="MultipleChoiceQuestion.ascx.cs">
       <DependentUpon>MultipleChoiceQuestion.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -217,6 +228,13 @@
       <DependentUpon>Products.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Results.aspx.cs">
+      <DependentUpon>Results.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Results.aspx.designer.cs">
+      <DependentUpon>Results.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Support.aspx.cs">
       <DependentUpon>Support.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
