--- a/CST65Project/CST465Project.csproj
+++ b/CST65Project/CST465Project.csproj
@@ -71,6 +71,7 @@
     <Content Include="About.aspx" />
     <Content Include="AddTreater.aspx" />
     <Content Include="Admin\UserManagement.aspx" />
+    <Content Include="Answers.html" />
     <Content Include="Assignment4.aspx" />
     <Content Include="Blog.aspx" />
     <Content Include="Contact.aspx" />
