--- a/CST65Project/CST465Project.csproj
+++ b/CST65Project/CST465Project.csproj
@@ -164,6 +164,7 @@
     <Compile Include="Code\ShortTextQuestion.cs" />
     <Compile Include="Code\ITestQuestion.cs" />
     <Compile Include="Code\QuestionAnswer.cs" />
+    <Compile Include="Code\UserProfileRepo.cs" />
     <Compile Include="Code\UserProfile.cs" />
     <Compile Include="Contact.aspx.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
