--- a/CST65Project/Web.config
+++ b/CST65Project/Web.config
@@ -8,7 +8,7 @@
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
   </appSettings>
   <connectionStrings>
-    <add connectionString="Server=aura.cset.oit.edu; Database=patrick_barnett; User=patrick_barnett;
+    <add connectionString="Server=aura.students.cset.oit.edu; Database=patrick_barnett; User=patrick_barnett;
                           Password=pb1749;" name="oitSqlServer" />
   </connectionStrings>
 
